--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
           packages:
             - gcc-7
             - g++-7
+            - ninja-build
       install: ./.travis/build-x86_64-linux/deps.sh
       script: ./.travis/build-x86_64-linux/build.sh
     - env: NAME="Test - Fuzz against Unicorn"
@@ -25,6 +26,7 @@ matrix:
             - gcc-7
             - g++-7
             - llvm-dev
+            - ninja-build
       install: ./.travis/test-a64-on-x86_64-linux/deps.sh
       script: ./.travis/test-a64-on-x86_64-linux/build.sh
     - env: NAME="Test - SSE3 only"
@@ -38,6 +40,7 @@ matrix:
             - gcc-7
             - g++-7
             - llvm-dev
+            - ninja-build
       install: ./.travis/sse3-only-on-x86_64-linux/deps.sh
       script: ./.travis/sse3-only-on-x86_64-linux/build.sh
     - env: NAME="macOS Build"
